--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -28,7 +28,7 @@ body{
     background-color: #FFFFFF;
     box-sizing: border-box;
     height: 100vh;
-    width: max(40%, 600px);
+    width: max(35%, 450px);
     padding: 10px;
     border-radius: 0 20px 20px 0;
     display: flex;
@@ -122,3 +122,31 @@ form > div:has(input:focus) > input{
     margin: 0 10px;
     text-transform: uppercase;
 }
+
+/* responsive solutions */
+@media (max-width: 640px) { 
+    .wrapper{
+        height: 100vh;
+        width: 100vw;
+        background-image: url(../images/office.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    .another-option{
+        font-weight: 500;
+        color: #fff;
+    }
+}
+    @media (max-width: 768px) {
+        .wrapper{
+            height: 100vh;
+            width: 100vw;
+            background-image: url(../images/office.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        .another-option{
+            font-weight: 500;
+            color: #fff;
+        }
+    }
