--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,7 +22,7 @@ body{
     background-position: right;
     overflow: hidden;
 }
-/* Sign-up */
+/* Sign-up and Login*/
 .wrapper{
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     background-color: #FFFFFF;
